# ManyBody-345

./: .gitignore  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.hpp  HalleyComet.cpp  HalleyComet.hpp  Particle.cpp  Particle.hpp  README.md  Vector.cpp  Vector.hpp  main.cpp
References/: fewbody.f  integrator.f  integrator.f.README.txt  integrator.f.input.txt
